# RAP

./: .gitignore  .gitmodules  00-install-rap-rust.sh  01-install-rap-cargo.sh  02-install-rap-llvm.sh  Cargo.toml  Dockerfile  README.md  Roadmap.md  config.toml  install.sh  install_cargo_rap.sh  install_rap_llvm.sh  main  rcanary01  safedrop01
.github/workflows/: release.yml
rap/: CMakeLists.txt  Cargo.toml  README.md  install.sh  install_rap.sh  rust-toolchain.toml  rust-toolchain.toml.bak
rap-llvm/: CMakeLists.txt  main.cpp  test.cpp  test.h
rap/phase_llvm/: main.cpp  test.cpp
rap/src/: analysis.rs  components.rs  lib.rs  utils.rs
rap/src/analysis/: callgraph.rs  core.rs  flow_analysis.rs  hello_world.rs  opt.rs  rcanary.rs  safedrop.rs  senryx.rs  show_mir.rs  type_analysis.rs  unsafety_isolation.rs  utils.rs
rap/src/analysis/core/: alias.rs  call_graph.rs  dataflow.rs  heap_item.rs  pointer_analysis.rs
rap/src/analysis/core/alias/: mop.rs
rap/src/analysis/core/alias/mop/: alias.rs  graph.rs  mop.rs  types.rs
rap/src/analysis/core/call_graph/: call_graph_helper.rs  call_graph_visitor.rs
rap/src/analysis/core/control_flow/: callgraph.rs
rap/src/analysis/core/dataflow/: debug.rs  graph.rs
rap/src/analysis/core/heap_item/: ownership.rs  type_visitor.rs
rap/src/analysis/flow_analysis/: inter_visitor.rs  intro_visitor.rs  order.rs  ownership.rs
rap/src/analysis/opt/: checking.rs  memory_cloning.rs
rap/src/analysis/opt/checking/: bounds_checking.rs
rap/src/analysis/opt/checking/bounds_checking/: bounds_len.rs  bounds_loop_push.rs
rap/src/analysis/opt/memory_cloning/: hash_key_cloning.rs  used_as_immutable.rs
rap/src/analysis/rcanary/: flow_analysis.rs  ranalyzer.rs  type_analysis.rs
rap/src/analysis/rcanary/flow_analysis/: inter_visitor.rs  intra_visitor.rs  intro_visitor.rs  order.rs  ownership.rs
rap/src/analysis/rcanary/ranalyzer/: inter_visitor.rs  intra_visitor.rs  order.rs  ownership.rs
rap/src/analysis/rcanary/type_analysis/: connect.rs  ownership.rs  type_visitor.rs
rap/src/analysis/safedrop/: alias.rs  bug_records.rs  check_bugs.rs  corner_handle.rs  graph.rs  log.rs  mod.rs  safedrop.rs  types.rs  utils.rs
rap/src/analysis/senryx/: inter_record.rs  matcher.rs  visitor.rs
rap/src/analysis/senryx/contracts/: abstract_state.rs  checker.rs  contract.rs  mod.rs  state_lattice.rs
rap/src/analysis/type_analysis/: connect.rs  ownership.rs  type_visitor.rs
rap/src/analysis/unsafety_isolation/: draw_dot.rs  generate_dot.rs  hir_visitor.rs  isolation_graph.rs
rap/src/analysis/utils/: def_path.rs  intrinsic_id.rs  show_mir.rs
rap/src/components/: context.rs  display.rs  fs.rs  grain.rs  log.rs
rap/src/utils/: display.rs  display_mir.rs  fs.rs  log.rs  source.rs
rapx/: Cargo.toml
rapx/src/: analysis.rs  lib.rs
rapx/src/analysis/: core.rs  opt.rs  rcanary.rs  safedrop.rs  unsafety_isolation.rs  utils.rs
rapx/src/analysis/core/: dataflow.rs  heap_item.rs
rapx/src/analysis/core/alias/: mop.rs
rapx/src/analysis/core/alias/mop/: alias.rs  mop.rs  types.rs
rapx/src/analysis/core/call_graph/: call_graph_helper.rs  call_graph_visitor.rs
rapx/src/analysis/core/dataflow/: debug.rs  graph.rs
rapx/src/analysis/core/heap_item/: ownership.rs  type_visitor.rs
rapx/src/analysis/opt/: memory_cloning.rs
rapx/src/analysis/opt/checking/: bounds_checking.rs
rapx/src/analysis/opt/checking/bounds_checking/: bounds_len.rs  bounds_loop_push.rs
rapx/src/analysis/opt/memory_cloning/: hash_key_cloning.rs  used_as_immutable.rs
rapx/src/analysis/rcanary/ranalyzer/: inter_visitor.rs  intra_visitor.rs  ownership.rs
rapx/src/analysis/safedrop/: alias.rs  check_bugs.rs  corner_handle.rs  graph.rs
rapx/src/analysis/senryx/: inter_record.rs
rapx/src/analysis/senryx/contracts/: checker.rs  mod.rs  state_lattice.rs
rapx/src/analysis/unsafety_isolation/: generate_dot.rs  hir_visitor.rs
rapx/src/analysis/utils/: def_path.rs  intrinsic_id.rs
rapx/src/utils/: fs.rs  log.rs
test cases/: batch.sh  clean.sh  rcanary01.rs  rcanary02.rs  safedrop01.rs  safedrop02.rs
test cases/alias_mop/src/: main.rs
test cases/alias_mop_field/src/: main.rs
test cases/dangling_min/: rustc-ice-2024-09-07T09:27:18.764865778Z-220328.txt
test cases/dangling_min/src/: main.rs
test cases/leak_min/: rustc-ice-2024-07-24T08:51:11.124856Z-22117.txt
test cases/leak_min/src/: main.rs
test cases/leak_proxy/src/: main.rs
test cases/nobug01/: Cargo.toml
test cases/rcanary01/src/: main.rs
test cases/rcanary02/src/: main.rs
test cases/safedrop01/: Cargo.toml
test cases/safedrop01/src/: main.rs
test cases/safedrop02/: Cargo.toml
test cases/safedrop02/src/: main.rs
test cases/safedrop03/: Cargo.toml
test cases/safedrop03/src/: main.rs
test cases/senryx_tests/slice_from_raw_parts/: Cargo.toml  rustc-ice-2024-10-09T12:41:40.429343069Z-2181137.txt
test cases/uaf_decrement_strong_count/: Cargo.toml
test cases/uaf_decrement_strong_count/src/: main.rs
test cases/uaf_drop/src/: main.rs
test cases/uaf_drop2/: rustc-ice-2024-09-07T09:28:01.724670739Z-220371.txt
test cases/uaf_drop2/src/: main.rs
test cases/uaf_lifetime/: rustc-ice-2024-07-24T08:49:49.649388Z-21970.txt
test cases/uaf_lifetime/src/: main.rs
test cases/uaf_module/src/: main.rs  module_a.rs
test cases/uaf_queue/src/: main.rs
test cases/uaf_small/: Cargo.toml  rustc-ice-2024-07-24T08:50:50.789425Z-22013.txt  rustc-ice-2024-07-25T04:38:53.427994715Z-129666.txt
tests/: batch.sh  rap.txt  rapx.txt
tests/CI_uaf/: batch.sh
tests/alias_mop/: Cargo.toml
tests/alias_mop_field/: Cargo.toml
tests/asterinas/read_none/: Cargo.toml
tests/asterinas/rwlock/: Cargo.toml
tests/bounds_loop_push/: Cargo.toml
tests/bounds_loop_push/src/: lib.rs
tests/deadlock_safedrop/: Cargo.toml
tests/hash_key_cloning/: Cargo.toml
tests/leak_min/: Cargo.toml
tests/leak_proxy/: Cargo.toml
tests/todo/bounds_len/: Cargo.toml
tests/uaf_drop/src/: main.rs
tests/uaf_drop2/: Cargo.toml
tests/uaf_drop2/src/: main.rs
tests/uaf_module/: Cargo.toml
(+25 files in other folders)
