[package]
name = "rap"
version = "1.0.0"
edition = "2018"
authors = ["Moran Tsui <cuimohan@fudan.edu.cn>"]
default-run = "rap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rap"

[[bin]]
name = "cargo-rap"

[lib]
name = "rap"

[dependencies]
lazy_static = "1.4"
snafu = "0.7.0"
chrono = "0.4.19"
serde_json = "1.0.72"
z3 = "0.12.1"
log = "0.4.14"
fern = {version = "0.6.2", features = ["colored"]}
wait-timeout = "0.2.0"
rustc-demangle = "0.1.21"
colorful = "0.2.1"
regex = "1.11.1"
once_cell = "1.20.1"
walkdir = "2"
cargo_metadata  = "0.18"
annotate-snippets = "0.11.4"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]

[package.metadata.rust-analyzer]
rustc_private = true
